fixed stats overlay z-index

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -110,7 +110,7 @@ select, input { border-radius: 10px; padding: 2px 6px; }
 
 .game-in-progress .tap-controller .zone { opacity:.25; background-color: transparent; }
 
-#overlay { position: absolute; top:0; left: 0; display: table; background-color: rgba(55,55,55,.5); width: 100%; height: 100%;}
+#overlay { position: absolute; top:0; left: 0; display: table; background-color: rgba(55,55,55,.5); width: 100%; height: 100%; z-index:10; }
 #overlay > div { display: table-cell; vertical-align: middle; color: greenyellow; text-align: center; }
 
 .current { background-color: gainsboro; color: black; }
